DropDownMenus: make sub menus visible, fix height for content div, optimize CSS

--- a/cacti/branches/main/include/css/cacti_dd_menu.css
+++ b/cacti/branches/main/include/css/cacti_dd_menu.css
@@ -2,24 +2,21 @@
 .cacti_dd_menu{
 	position: absolute;
 	z-index: 999;
-	min-width: 150;
-	max-width: 150;
+	min-width: 150px;
+	max-width: 150px;
 	background: #363636;
 	border: 1px solid #7F7F99;
 	padding: 2px;
-	text-aligns:justify;
 	text-decoration: none;
-	opacity:0.98;
-	filter:alpha(opacity=92);
 	overflow: hidden;
 }
 
 .cacti_dd_menu .title{
 	display: none;
-	color: #c1c1c1;
-	border-bottom: 1px solid #7F7F99;
+	color: #ffffff;
 	padding: 2px 2px;
 	overflow: hidden;
+	background: transparent url('../../images/rowSubHeader2.png') repeat-x scroll left top;
 }
 
 .cacti_dd_menu .title h6{
@@ -30,9 +27,11 @@
 }
 
 .cacti_dd_menu .back{
+	cursor: pointer;
 	display: none;
 	overflow: hidden;
 	color: #ffffff;
+	font-family: Arial, Verdana, Helvetica, sans-serif;	
 	font-size: small;
 	font-weight: bold;
 	padding: 2px 2px;
@@ -54,7 +53,8 @@
 
 .cacti_dd_menu .content h6 a{
   	display: block;
-  	margin: 0; padding: 3px 2px; 
+  	margin: 0; 
+	padding: 3px 2px; 
 	color:#c3c3c3;
 	width: auto;
 	text-decoration: none;
@@ -70,7 +70,6 @@
 	font-size:small;
 	font-weight: 600;
 	text-decoration: none;
-	-moz-border-radius: 2px;
 	background: transparent url('../../images/tabDefault.png') repeat-x scroll left top;
 }
 
@@ -93,4 +92,8 @@
 .cacti_dd_menu .html{
 	display: none;
 	overflow: hidden;
+}
+
+.cacti_dd_menu .icon{
+	vertical-align:middle;
 }
